--- a/index.css
+++ b/index.css
@@ -190,12 +190,59 @@ main {
     color: #fff;
 }
 .place-of-work-pill{
-    background-color: #f9320a;
-    color: skyblue;
-    padding: 10px;
+    background-color: #000000;
+    color: #fff;
+    padding: 8px;
     margin: 4px;
     border-radius: 26px;
     font-size: 14px;
     transition: 1.5;
 
+}
+/* PROJECT CARDS*/
+.project-card-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-top: 4rem;
+
+}
+
+.project-card{
+padding: 10px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+transition: 0.3s;
+border-radius: 5px;
+}
+
+.project-card-img {
+    width: 100%;
+    height: 200%;
+}
+
+.card-content {
+    width: 300%;
+    padding: 2px 16px;
+}
+
+.project-title {
+    color: skyblue;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.project-links {
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+
+}
+
+.project-links-svg {
+    width: 20px;
+    height: 20px;
+    fill: skyblue;
 }
